--- a/views/index.html
+++ b/views/index.html
@@ -6,36 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mirs room</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/custom-form.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
   <body>
-    <nav class="navbar navbar-inverse" style="border-radius: 0px;">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">MirsRoom control</a>
-            </div>
-        </div>
-    </nav>
+    <header>
+      <h1>Welcome to MirsRoom</h1>
+    </header>
     <div id="app">
-      <div class="container">
-        <div class="form-group">
-          <label class="control-label col-md-2">Table light</label>
-          <div class="col-md-10">
-            <button class="btn" onclick="update_table_light()" :class="roomData.table_light_status == 1 ? 'btn-danger' : 'btn-success'">
-              {{roomData.table_light_status == 1 ? 'Turn off' : 'Turn on'}}
-            </button>
+      <div id="form">
+        <div class="fish" id="fish"></div>
+        <div class="fish" id="fish2"></div>
+        <div id="waterform">
+          <div class="form-group">
+            <label>Table light:</label>
+            <div class="col-md-offset-4 col-md-8">
+              <button class="btn" onclick="update_table_light()" :class="roomData.table_light_status == 1 ? 'btn-danger' : 'btn-success'">
+                {{roomData.table_light_status == 1 ? 'Turn off' : 'Turn on'}}
+              </button>
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label class="control-label col-md-2">Fan</label>
-          <div class="col-md-10">
-            <button class="btn" onclick="update_fan()" :class="roomData.fan_status == 1 ? 'btn-danger' : 'btn-success'">
-              {{roomData.fan_status == 1 ? 'Turn off' : 'Turn on'}}
-            </button>
+          <div class="form-group">
+            <label>Fan:</label>
+            <div class="col-md-offset-4 col-md-8">
+              <button class="btn" onclick="update_fan()" :class="roomData.fan_status == 1 ? 'btn-danger' : 'btn-success'">
+                {{roomData.fan_status == 1 ? 'Turn off' : 'Turn on'}}
+              </button>
+            </div>
+          </div>
+          <div v-if="false" class="form-group">
+            <label>Config IP:</label>
+            <div class="col-md-8">
+              <input id="ip-config" v-model="ip_config" type="text"></input>
+            </div>
+            <div class="col-md-4">
+              <button class="btn btn-warning" onclick="set_ip_config()">Save</button>
+            </div>
           </div>
         </div>
       </div>
+      <footer>
+      </footer>
     </div>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="/socket.io/socket.io.js"></script>
